# donde-server

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  README_mac_m1.md
api/: common.pb.h  feature_extract.grpc.pb.cc  feature_extract.grpc.pb.h  feature_extract.pb.h  feature_search.grpc.pb.cc  feature_search.grpc.pb.h  feature_search.pb.h  feature_search_inner.grpc.pb.cc  feature_search_inner.grpc.pb.h  feature_search_inner.pb.h
conan/: conanfile.txt  conanprofile.m1.linux  conanprofile.ubuntu
include/: types.h
include/search/: searcher.h
proto/: build_proto.sh
server/: CMakeLists.txt
server/protos/: server.proto
source/processor/: aligner_worker.cpp
source/search/: file_system_storage.cpp
src/feature_extract/: face_service.cc  face_service.h  main.cc
src/feature_search_manager/: feature_search.cc  feature_search.h  main.cc  remote_worker.h  remote_worker_factory.h
src/feature_search_worker/: feature_search_worker.cc  feature_search_worker.h
test/: CMakeLists.txt
test/source/search/: file_system_storage.cpp
